--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -16,7 +16,7 @@ a {
 }
 
 :root {
-  --greenAwesome: #00C65E;
+  --greenAwesome: #00c65e;
   --white: #fff;
-  --grayPrimary: #363A45;
+  --grayPrimary: #363a45;
 }
