--- a/frontend/src/components/btn1/btn1.module.scss
+++ b/frontend/src/components/btn1/btn1.module.scss
@@ -19,7 +19,8 @@
 }
 
 .btn1:hover {
-  background-color: rgb(183, 68, 68);
+  // background-color: rgb(183, 68, 68);
+  opacity: 0.7;
   .img {
     // transform: rotate(135deg);
   }
