--- a/frontend/src/components/boardMainItem/boardMainItem.module.scss
+++ b/frontend/src/components/boardMainItem/boardMainItem.module.scss
@@ -1,4 +1,6 @@
 .item {
+  cursor: pointer;
+  transition: all 0.3s;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -93,4 +95,9 @@
       }
     }
   }
+}
+
+.item:hover {
+
+  box-shadow: 1px 2px 16px 3px rgba(54, 58, 69, 0.18);
 }
