--- a/frontend/src/pages/userData/userData.module.scss
+++ b/frontend/src/pages/userData/userData.module.scss
@@ -19,7 +19,7 @@
     margin-bottom: 20px;
   }
   .data {
-    padding: 30px 35px;
+    padding: 30px;
     box-shadow: 1px 2px 16px 3px rgba(54, 58, 69, 0.08);
     border-radius: 10px;
   }
