--- a/frontend/src/header/menuMain/menuItem/menuItem.module.scss
+++ b/frontend/src/header/menuMain/menuItem/menuItem.module.scss
@@ -9,6 +9,10 @@
 
 .item:hover {
   background-color: var(--grrenLite);
-  // font-weight: 700;
   color: var(--greenAwesome);
+}
+
+.active {
+  color: var(--greenAwesome);
+  background-color: var(--grayLite);
 }
