--- a/frontend/src/footer/footer.module.scss
+++ b/frontend/src/footer/footer.module.scss
@@ -1,7 +1,77 @@
 .footer {
-	min-height: 300px;
-	background-color: #EFEFEF;
-	margin-top: 30px;
-	text-align: center;
-	color: rgba(51, 51, 51, 0.231);
+  min-height: 300px;
+  background-color: #efefef;
+  margin-top: 30px;
+  text-align: center;
+  color: rgba(51, 51, 51, 0.231);
+  padding-bottom: 15px;
+
+  .topLine {
+    padding: 0 50px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #dadcdc;
+
+    .logo,
+    .social {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+
+      span {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 150%;
+      }
+    }
+  }
+
+  .main {
+    padding-top: 30px;
+    padding-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 85px;
+    justify-content: center;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 140%;
+    color: #363a45;
+    ul {
+      list-style-type: none;
+      cursor: pointer;
+      p {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 150%;
+        color: #363a45;
+      }
+li{
+text-align: left;
+}
+      li:hover {
+        color: #308f1f;
+      }
+    }
+  }
+
+  .bottom {
+    padding: 0 30px;
+    height: 40px;
+    background-color: #fff;
+    color: var(--grayPrimary);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-weight: 400;
+    font-size: 12px;
+
+    .links {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+  }
 }
