--- a/frontend/src/header/header.module.scss
+++ b/frontend/src/header/header.module.scss
@@ -1,5 +1,10 @@
 .wrap {
   max-width: 1440px;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: #fff;
+  padding-bottom: 10px;
 
   .topBtn {
   }
