--- a/frontend/src/pages/center/center.module.scss
+++ b/frontend/src/pages/center/center.module.scss
@@ -50,3 +50,121 @@
     }
   }
 }
+
+.reboot {
+  margin-bottom: 60px;
+  учзщкек h2 {
+    text-align: center;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 120%;
+    color: #363a45;
+  }
+
+  .rebootItems {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+
+    .item {
+      padding: 14px 11px;
+      box-shadow: 1px 2px 16px 3px rgba(54, 58, 69, 0.08);
+      border-radius: 10px;
+
+      p {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 152%;
+        text-align: center;
+        color: #363a45;
+      }
+    }
+    .item:hover {
+      box-shadow: 1px 2px 16px 3px rgba(54, 58, 69, 0.18);
+    }
+  }
+}
+
+.malfunctions {
+  padding: 30px;
+  padding-top: 10px;
+  text-align: center;
+  box-shadow: 1px 2px 16px 3px rgba(54, 58, 69, 0.08);
+  border-radius: 10px;
+  h2 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 120%;
+    color: #363a45;
+  }
+  .imtes {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    flex-wrap: wrap;
+    column-gap: 136px;
+    cursor: pointer;
+    .item {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+    }
+    .item:hover {
+      opacity: 0.6;
+    }
+  }
+}
+
+.callToAction {
+  z-index: 4;
+  position: fixed;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  visibility: hidden;
+  // height: 300px;
+  background-color: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  h3 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 120%;
+
+    color: #363a45;
+  }
+  p {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 152%;
+    color: #363a45;
+  }
+  .input {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 42px;
+    input {
+      width: 300px;
+      height: 40px;
+      background: #ffffff;
+      border: 1px solid #dadcdc;
+      box-sizing: border-box;
+      border-radius: 10px;
+    }
+  }
+  > span {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 152%;
+    color: #363a45;
+    padding-bottom: 30px;
+  }
+}
+
+.active {
+  visibility: visible;
+}
