--- a/frontend/src/components/menuDrop/menuDrop.module.scss
+++ b/frontend/src/components/menuDrop/menuDrop.module.scss
@@ -2,6 +2,15 @@
   position: relative;
   margin-left: 10px;
   padding: 10px;
+
+  .icon {
+    transition: all 0.2s;
+  }
+
+  .icon:hover {
+    transform: scale(1.6)
+  }
+
   .menuDropOne {
     position: absolute;
     visibility: hidden;
@@ -24,3 +33,4 @@
     opacity: 1;
   }
 }
+
