--- a/frontend/src/pages/market/marketItem/marketItem.module.scss
+++ b/frontend/src/pages/market/marketItem/marketItem.module.scss
@@ -6,6 +6,7 @@
   border-radius: 8px;
   width: 200px;
   position: relative;
+  min-height: 350px;
 
   > p {
     margin-top: 7px;
@@ -40,10 +41,15 @@
     border: none;
     background-color: #fff;
     padding: 7px 0;
+    transition: all 0.3s;
   }
 
   button:hover {
     opacity: 0.7;
+    background-color: rgb(169, 169, 169);
+    box-shadow: 1px 2px 16px 3px rgba(54, 58, 69, 0.48);
+    transform: scale(1.3);
+    color: #fff;
   }
 
   .like {
@@ -55,6 +61,6 @@
   }
 
   .like:hover {
-    transform: scale(1.5);
+    transform: scale(2.5);
   }
 }
