--- a/frontend/src/components/naviMenu/naviMenu.module.scss
+++ b/frontend/src/components/naviMenu/naviMenu.module.scss
@@ -10,3 +10,9 @@
 .naviMenu:hover {
   box-shadow: 1px 2px 16px 3px rgba(54, 58, 69, 0.18);
 }
+
+@media (max-width: 1024px) {
+  .naviMenu {
+    // width: 500px;
+  }
+}
