--- a/frontend/src/header/extension/extension.module.scss
+++ b/frontend/src/header/extension/extension.module.scss
@@ -5,3 +5,11 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media (max-width: 1024px) {
+  .extension {
+    // justify-content: center;
+    // align-items:center;
+    display: none;
+  }
+}
