--- a/frontend/src/header/userModule/userModule.module.scss
+++ b/frontend/src/header/userModule/userModule.module.scss
@@ -7,3 +7,11 @@
   font-size: 14px;
   line-height: 150%;
 }
+
+@media (max-width: 768px) {
+  .userModule {
+    // justify-content: center;
+    // align-items:center;
+    // display: none;
+  }
+}
