--- a/frontend/src/pages/userData/userData.module.scss
+++ b/frontend/src/pages/userData/userData.module.scss
@@ -24,3 +24,13 @@
     border-radius: 10px;
   }
 }
+
+@media (max-width: 1024px) {
+  .board {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: 20px;
+  }
+}
